# GradientReversal

./: .gitignore  pyproject.toml
gradient_reversal/: functional.py  module.py
tests/: test_readme_usage.py
