[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-reversal"
version = "0.1.0"
description = "PyTorch Gradient Reversal Layer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
]

[tool.setuptools]
packages = ["gradient_reversal"]
